Update deploy-rocket.sh